third_party/move/move-compiler-v2/tests/checking/unused/private_call_3.exp

Diagnostics:
warning: Function `0x42::m::inaccessible` is unused: it has no current callers and is private to its module.
  ┌─ tests/checking/unused/private_call_3.move:8:16
  │
8 │     inline fun inaccessible(): u64 {
  │                ^^^^^^^^^^^^

warning: Function `0x42::m_nonfriend::inaccessible` is unused: it has no current callers and is private to its module.
   ┌─ tests/checking/unused/private_call_3.move:24:16
   │
24 │     inline fun inaccessible(): u64 {
   │                ^^^^^^^^^^^^

warning: Function `0x42::m_nonfriend::friend_accessible` is unused: it has no current callers and is `public(friend)` but its module has no friends.
   ┌─ tests/checking/unused/private_call_3.move:28:31
   │
28 │     public(friend) inline fun friend_accessible(): u64 {
   │                               ^^^^^^^^^^^^^^^^^

warning: Function `0x42::o::inaccessible` may be unused: it has callers, but none with access.
   ┌─ tests/checking/unused/private_call_3.move:46:16
   │
46 │     inline fun inaccessible(): u64 {
   │                ^^^^^^^^^^^^

error: inline function `0x42::o::inaccessible` cannot be called from function `0x42::n::test` because it is private to module `0x42::o`
   ┌─ tests/checking/unused/private_call_3.move:46:16
   │
46 │     inline fun inaccessible(): u64 {
   │                ^^^^^^^^^^^^ callee
   ·
93 │     assert!(o::inaccessible() == 42, 1);
   │             ----------------- called here

warning: Function `0x42::o_nonfriend::inaccessible` may be unused: it has callers, but none with access.
   ┌─ tests/checking/unused/private_call_3.move:72:16
   │
72 │     inline fun inaccessible(): u64 {
   │                ^^^^^^^^^^^^

error: inline function `0x42::o_nonfriend::inaccessible` cannot be called from function `0x42::n::test2` because it is private to module `0x42::o_nonfriend`
   ┌─ tests/checking/unused/private_call_3.move:72:16
   │
72 │     inline fun inaccessible(): u64 {
   │                ^^^^^^^^^^^^ callee
   ·
99 │     assert!(o_nonfriend::inaccessible() == 42, 1);
   │             --------------------------- called here

// -- Model dump before bytecode pipeline
module 0x42::m_nonfriend {
    friend fun bar(): u64 {
        42
    }
    public inline fun foo(): u64 {
        m_nonfriend::bar()
    }
    friend inline fun friend_accessible(): u64 {
        m_nonfriend::bar()
    }
    private inline fun inaccessible(): u64 {
        m_nonfriend::bar()
    }
    spec fun $bar(): u64 {
        42
    }
    spec fun $foo(): u64 {
        m_nonfriend::$bar()
    }
    spec fun $friend_accessible(): u64 {
        m_nonfriend::$bar()
    }
    spec fun $inaccessible(): u64 {
        m_nonfriend::$bar()
    }
} // end 0x42::m_nonfriend
module 0x42::m {
    friend fun bar(): u64 {
        42
    }
    public inline fun foo(): u64 {
        m::bar()
    }
    friend inline fun friend_accessible(): u64 {
        m::bar()
    }
    private inline fun inaccessible(): u64 {
        m::bar()
    }
    spec fun $bar(): u64 {
        42
    }
    spec fun $foo(): u64 {
        m::$bar()
    }
    spec fun $friend_accessible(): u64 {
        m::$bar()
    }
    spec fun $inaccessible(): u64 {
        m::$bar()
    }
} // end 0x42::m
module 0x42::o_nonfriend {
    use 0x42::m; // resolved as: 0x42::m
    use 0x42::m_nonfriend; // resolved as: 0x42::m_nonfriend
    private fun bar(): u64 {
        42
    }
    public inline fun foo(): u64 {
        m::foo();
        m_nonfriend::foo();
        o_nonfriend::bar()
    }
    friend inline fun friend_accessible(): u64 {
        m::foo();
        m_nonfriend::foo();
        o_nonfriend::bar()
    }
    private inline fun inaccessible(): u64 {
        m::foo();
        m_nonfriend::foo();
        o_nonfriend::bar()
    }
    spec fun $bar(): u64 {
        42
    }
    spec fun $foo(): u64;
    spec fun $friend_accessible(): u64;
    spec fun $inaccessible(): u64;
} // end 0x42::o_nonfriend
module 0x42::o {
    use 0x42::m; // resolved as: 0x42::m
    use 0x42::m_nonfriend; // resolved as: 0x42::m_nonfriend
    private fun bar(): u64 {
        42
    }
    public inline fun foo(): u64 {
        m::foo();
        m_nonfriend::foo();
        o::bar()
    }
    friend inline fun friend_accessible(): u64 {
        m::foo();
        m_nonfriend::foo();
        o::bar()
    }
    private inline fun inaccessible(): u64 {
        m::foo();
        m_nonfriend::foo();
        o::bar()
    }
    spec fun $bar(): u64 {
        42
    }
    spec fun $foo(): u64;
    spec fun $friend_accessible(): u64;
    spec fun $inaccessible(): u64;
} // end 0x42::o
module 0x42::n {
    use 0x42::o; // resolved as: 0x42::o
    use 0x42::o_nonfriend; // resolved as: 0x42::o_nonfriend
    public fun test() {
        if Eq<u64>(o::foo(), 42) {
          Tuple()
        } else {
          Abort(1)
        };
        if Eq<u64>(o::inaccessible(), 42) {
          Tuple()
        } else {
          Abort(1)
        };
        if Eq<u64>(o::friend_accessible(), 42) {
          Tuple()
        } else {
          Abort(1)
        };
        Tuple()
    }
    public fun test2() {
        if Eq<u64>(o_nonfriend::foo(), 42) {
          Tuple()
        } else {
          Abort(1)
        };
        if Eq<u64>(o_nonfriend::inaccessible(), 42) {
          Tuple()
        } else {
          Abort(1)
        };
        if Eq<u64>(o_nonfriend::friend_accessible(), 42) {
          Tuple()
        } else {
          Abort(1)
        };
        Tuple()
    }
    spec fun $test() {
        Tuple()
    }
    spec fun $test2() {
        Tuple()
    }
} // end 0x42::n
